# DocMind_App

./: .gitignore  README.md
OCR/: Pdf_OCR_Processing4.ipynb  bart-model.ipynb
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/visualize/: page.tsx
frontend/src/components/: header.tsx  sidebar.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/lib/: api.ts
llm/: BART_LLM_train.ipynb
